--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-    <link
-      rel="shortcut icon"
-      href="src/imagenes/cerveza.png"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="src/img/cerveza.png" type="image/x-icon" />
   </head>
   <body>
     <div id="root"></div>
